fusionx/base/java/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusionx
  labels:
    app: app
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: app
  type: ClusterIP
