fusionx/base/java/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fusionx
spec:
  hosts:
  - "*"
  gateways:
  - default/fusionx-gateway
  http:
  - match:
    - uri:
        prefix: /app
    route:
    - destination:
        host: app.default.svc.cluster.local

# works together with istio service for better control of incomming traffic and fault tolleration
